syntax = "proto3";

package consumer;

option go_package = "./api/grpc/consumer";

import "api/grpc/queue/service.proto";
import "api/grpc/cloudevents/cloudevent.proto";

service Service {
  rpc SubmitBatch(SubmitBatchRequest) returns (queue.BatchResponse);
}

message SubmitBatchRequest {
  repeated pb.CloudEvent msgs = 1;
}
